2010-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RcppDoxygenExamples.h: Correct three wrong paths for
	ConvolveBenchmak example files, and add missing FastLM/ examples

2010-06-17  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Vector.h: split into more manageable files

	* inst/include/Rcpp/vector/VectorBase.h: simplify the VectorBase class
	so that it is just implementing CRTP. It does not inherit from RObject anymore.
	This will help implementation of sugar.

2010-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDateVector.cpp: Also provide non-const operator()(int i)
	* inst/include/RcppDateVector.h: Idem

2010-06-16  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/InternalFunction.h: new class Rcpp::InternalFunction
	* R/Module.R: R support for Rcpp::InternalFunction

	* inst/include/Rcpp/Module.h: added the LOAD_RCPP_MODULE macro to
	allow loading a module from C++

	* R/Module.R: if the first argument is an external pointer already,
	Module assumes it is a module pointer. (R support for the item above)

2010-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetimeVector.cpp: Use std::vector internally
	* inst/include/RcppDatetimeVector.h: Idem
	* src/RcppDateVector.cpp: Use std::vector internally
	* inst/include/RcppDateVector.h: Idem

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppDatetimeVector.cpp: Add constructor from int
	* inst/include/RcppDatetimeVector.h: Idem
	* src/RcppDateVector.cpp: Add constructor from int
	* inst/include/RcppDateVector.h: Idem

2010-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/RcppResultSet.cpp: Proper template specialisation for wrap
	* inst/include/RcppResultSet.h: Idem

	* src/RcppDateVector.cpp: Add const qualifier to operator()(int i)
	* inst/include/RcppDateVector.h: Idem

2010-06-13  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/Vector.h: added new factory functions for Vector: